--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="login-form">
-        <input type="text" placeholder="What is yout name?">
+    <form id="login-form">
+        <input 
+            required
+            maxlength="15"
+            type="text"  
+            placeholder="What is yout name?"
+        >
         <button>Log In</button>
-    </div>
+    </form>
     
     <script src="app.js"></script>
 </body>
