--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <form id="login-form">
-        <input 
-            required
-            maxlength="15"
-            type="text"  
-            placeholder="What is yout name?"
-        >
-        <button>Log In</button>
-    </form>
-    
-    <script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <form id = "login-form">
+            <input
+                required
+                maxlength="15"
+                type="text"
+                placeholder="What is your name?"
+            />
+            <input type="submit" value="Log in">
+        </form>
+        <h1 id = "greeting" class = "hidden"></h1>
+        <script src="app.js"></script>
+    </body>
 </html>
