--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <form id = "login-form">
+        <form id = "login-form" class="hidden">
             <input
                 required
                 maxlength="15"
