--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <form id = "login-form" class="hidden">
-            <input
+            <input class="index-form"
                 required
                 maxlength="15"
                 type="text"
                 placeholder="What is your name?"
             />
-            <input type="submit" value="Log in">
+            <input class="index-form" type="submit" value="Log in">
         </form>
         <h2 id="clock">00:00:00</h2>
         <h1 id = "greeting" class = "hidden"></h1>
