--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
         <title>Document</title>
     </head>
     <body>
-        <form id = "login-form" class="hidden">
-            <input class="index-form"
-                required
-                maxlength="15"
-                type="text"
-                placeholder="What is your name?"
-            />
-            <input class="index-form" type="submit" value="Log in">
-        </form>
-        <h2 id="clock">00:00:00</h2>
-        <h1 id = "greeting" class = "hidden"></h1>
-        <form id="todo-form">
-            <input type="text" placeholder="Write a To Do and Press Enter" required>
-        </form>
-        <ul id="todo-list">
-        </ul>
+        <section class="center">
+            <h1 id="myDate">0000/00/00 day</h1>
+            <h2 id="clock">00:00:00</h2>
+            <form id = "login-form" class="hidden">
+                <input class="index-form"
+                    required
+                    maxlength="15"
+                    type="text"
+                    placeholder="What is your name?"
+                />
+                <input class="index-form" type="submit" value="Log in">
+            </form>
+            <h1 id = "greeting" class = "hidden"></h1>
+            <form id="todo-form">
+                <input type="text" placeholder="Write a To Do and Press Enter" required>
+            </form>
+            <ul id="todo-list">
+            </ul>
+        </section>
         <div id="quote">
             <span></span>
             <span></span>
