First screen CSS

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     type="text"
                     placeholder="What is your name?"
                 />
-                <input class="index-form" type="submit" value="Log in">
+                <!-- <input class="index-form" type="submit" value="Log in"> -->
             </form>
             <h1 id = "greeting" class = "hidden"></h1>
             <form id="todo-form">
-                <input type="text" placeholder="Write a To Do and Press Enter" required>
+                <input id="todo-input" type="text" placeholder=" To Do" required>
             </form>
             <ul id="todo-list">
             </ul>
